JPN-482 Fixed unaligned YOUR RANK and CONTRIBUTIONS text in contrib module

--- a/extensions/wikia/CommunityPage/styles/components/_contributors-module.scss
+++ b/extensions/wikia/CommunityPage/styles/components/_contributors-module.scss
@@ -57,6 +57,10 @@
 			margin-right: 28px;
 		}
 
+		.community-page-user-rank {
+			min-height: 20px;
+		}
+
 		.community-page-subtle {
 			color: $color-alternate-text;
 			font-size: 10px;
